@@ -84,10 +84,10 @@ public class ForumsDAO {
   private static final String MESSAGE_COLUMN_STATUS = "status";
   private static final String MESSAGE_COLUMNS =
       MESSAGE_COLUMN_MESSAGE_ID + ", "
-      + MESSAGE_COLUMN_MESSAGE_TITLE + ", " + MESSAGE_COLUMN_MESSAGE_AUTHOR
-      + ", " + MESSAGE_COLUMN_FORUM_ID + ", "
-      + MESSAGE_COLUMN_MESSAGE_PARENT_ID + ", " + MESSAGE_COLUMN_MESSAGE_DATE + " , "
-      + MESSAGE_COLUMN_STATUS;
+          + MESSAGE_COLUMN_MESSAGE_TITLE + ", " + MESSAGE_COLUMN_MESSAGE_AUTHOR
+          + ", " + MESSAGE_COLUMN_FORUM_ID + ", "
+          + MESSAGE_COLUMN_MESSAGE_PARENT_ID + ", " + MESSAGE_COLUMN_MESSAGE_DATE + " , "
+          + MESSAGE_COLUMN_STATUS;
   // Subscriptions table.
   private static final String SUBSCRIPTION_TABLE = "SC_Forums_Subscription";
   private static final String SUBSCRIPTION_COLUMN_USER_ID = "userId";
@@ -260,12 +260,12 @@ public class ForumsDAO {
    * @return The list of forums corresponding to the primary key (Forum).
    * @throws SQLException An SQL exception.
    */
-  public static ArrayList<Forum> getForumsList(Connection con, ForumPK forumPK)
+  public static List<Forum> getForumsList(Connection con, ForumPK forumPK)
       throws SQLException {
     SilverTrace.info("forums", "ForumsDAO.getForumsList()",
         "root.MSG_GEN_PARAM_VALUE", "selectQuery = " + QUERY_GET_FORUMS_LIST);
 
-    ArrayList<Forum> forums = new ArrayList<Forum>();
+    List<Forum> forums = new ArrayList<Forum>();
     PreparedStatement selectStmt = null;
     ResultSet rs = null;
     try {
@@ -315,18 +315,18 @@ public class ForumsDAO {
    * @return The list of forums corresponding to the primary key and the category id.
    * @throws SQLException An SQL exception.
    */
-  public static ArrayList<Forum> getForumsListByCategory(Connection con,
+  public static List<Forum> getForumsListByCategory(Connection con,
       ForumPK forumPK, String categoryId) throws SQLException {
     String selectQuery =
         (StringUtil.isDefined(categoryId)
-        ? QUERY_GET_FORUMS_LIST_BY_CATEGORY_WITH_NOT_NULL_CATEGORY
-        : QUERY_GET_FORUMS_LIST_BY_CATEGORY_WITH_NULL_CATEGORY);
+            ? QUERY_GET_FORUMS_LIST_BY_CATEGORY_WITH_NOT_NULL_CATEGORY
+            : QUERY_GET_FORUMS_LIST_BY_CATEGORY_WITH_NULL_CATEGORY);
     SilverTrace.debug("forums", "ForumsDAO.getForumsListByCategory()",
         "root.MSG_GEN_PARAM_VALUE", "categoryId = " + categoryId);
     SilverTrace.info("forums", "ForumsDAO.getForumsListByCategory()",
         "root.MSG_GEN_PARAM_VALUE", "selectQuery = " + selectQuery);
 
-    ArrayList<Forum> forums = new ArrayList<Forum>();
+    List<Forum> forums = new ArrayList<Forum>();
     PreparedStatement selectStmt = null;
     ResultSet rs = null;
     try {
@@ -351,12 +351,12 @@ public class ForumsDAO {
    * @return The list of ids of forums which parent is the forum corresponding to the primary key.
    * @throws SQLException An SQL exception.
    */
-  public static ArrayList<String> getForumSonsIds(Connection con, ForumPK forumPK)
+  public static List<String> getForumSonsIds(Connection con, ForumPK forumPK)
       throws SQLException {
     SilverTrace.info("forums", "ForumsDAO.getForumSonsIds()",
         "root.MSG_GEN_PARAM_VALUE", "selectQuery = " + QUERY_GET_FORUM_SONS);
 
-    ArrayList<String> forumIds = new ArrayList<String>();
+    List<String> forumIds = new ArrayList<String>();
     PreparedStatement selectStmt = null;
     ResultSet rs = null;
     try {
@@ -466,7 +466,7 @@ public class ForumsDAO {
       throws SQLException {
     SilverTrace.info("forums", "ForumsDAO.getForumParentId()",
         "root.MSG_GEN_PARAM_VALUE", "selectQuery = "
-        + QUERY_GET_FORUM_PARENT_ID);
+            + QUERY_GET_FORUM_PARENT_ID);
 
     PreparedStatement selectStmt = null;
     ResultSet rs = null;
@@ -493,7 +493,7 @@ public class ForumsDAO {
       throws SQLException {
     SilverTrace.info("forums", "ForumsDAO.getForumInstanceId()",
         "root.MSG_GEN_PARAM_VALUE", "selectQuery = "
-        + QUERY_GET_FORUM_INSTANCE_ID);
+            + QUERY_GET_FORUM_INSTANCE_ID);
 
     PreparedStatement selectStmt = null;
     ResultSet rs = null;
@@ -530,7 +530,7 @@ public class ForumsDAO {
         throw new ForumsRuntimeException("ForumsDAO.getForumCreatorId()",
             SilverpeasRuntimeException.ERROR,
             "root.EX_CANT_LOAD_ENTITY_ATTRIBUTES", "ForumId = " + forumId
-            + " not found in database !");
+                + " not found in database !");
       }
     } finally {
       DBUtil.close(rs, stmt);
@@ -591,7 +591,7 @@ public class ForumsDAO {
       if (forumLocklevel >= level) {
         SilverTrace.info("forums", "ForumsDAO.unlockForum()",
             "root.MSG_GEN_PARAM_VALUE", "Query2 = "
-            + QUERY_UNLOCK_FORUM_SET_ACTIVE);
+                + QUERY_UNLOCK_FORUM_SET_ACTIVE);
 
         declareStmt = con.prepareStatement(QUERY_UNLOCK_FORUM_SET_ACTIVE);
         declareStmt.setInt(1, 1);
@@ -701,7 +701,7 @@ public class ForumsDAO {
     try {
       SilverTrace.info("forums", "ForumsDAO.deleteForum()",
           "root.MSG_GEN_PARAM_VALUE", "deleteQuery  = "
-          + QUERY_DELETE_FORUM_SUBSCRIPTION);
+              + QUERY_DELETE_FORUM_SUBSCRIPTION);
       deleteStmt = con.prepareStatement(QUERY_DELETE_FORUM_SUBSCRIPTION);
       deleteStmt.setInt(1, forumId);
       deleteStmt.executeUpdate();
@@ -721,6 +721,7 @@ public class ForumsDAO {
       DBUtil.close(deleteStmt);
     }
   }
+
   private static final String QUERY_GET_MESSAGES_LIST_BY_FORUM = "SELECT "
       + MESSAGE_COLUMNS + " FROM " + MESSAGE_TABLE + " WHERE "
       + MESSAGE_COLUMN_FORUM_ID + " = ?";
@@ -735,7 +736,7 @@ public class ForumsDAO {
       throws SQLException {
     SilverTrace.info("forums", "ForumsDAO.getMessagesList()",
         "root.MSG_GEN_PARAM_VALUE", "selectQuery  = "
-        + QUERY_GET_MESSAGES_LIST_BY_FORUM);
+            + QUERY_GET_MESSAGES_LIST_BY_FORUM);
 
     ArrayList<Message> messages = new ArrayList<Message>();
     PreparedStatement selectStmt = null;
@@ -752,6 +753,7 @@ public class ForumsDAO {
     }
     return messages;
   }
+
   private static final String QUERY_GET_MESSAGES_IDS_BY_FORUM = "SELECT "
       + MESSAGE_COLUMN_MESSAGE_ID + " FROM " + MESSAGE_TABLE + " WHERE "
       + MESSAGE_COLUMN_FORUM_ID + " = ?";
@@ -773,7 +775,7 @@ public class ForumsDAO {
    * parent message corresponds to the message id (if it is valued).
    * @throws SQLException An SQL exception.
    */
-  public static ArrayList<String> getMessagesIds(Connection con, ForumPK forumPK,
+  public static List<String> getMessagesIds(Connection con, ForumPK forumPK,
       int messageParentId) throws SQLException {
     String query = (messageParentId != -1 ? QUERY_GET_MESSAGES_IDS_BY_FORUM_AND_MESSAGE
         : QUERY_GET_MESSAGES_IDS_BY_FORUM);
@@ -805,7 +807,7 @@ public class ForumsDAO {
    * @return The list of ids of messages of the forum corresponding to the primary key.
    * @throws SQLException An SQL exception.
    */
-  public static ArrayList<String> getMessagesIds(Connection con, ForumPK forumPK)
+  public static List<String> getMessagesIds(Connection con, ForumPK forumPK)
       throws SQLException {
     return getMessagesIds(con, forumPK, -1);
   }
@@ -816,10 +818,11 @@ public class ForumsDAO {
    * @return The list of ids of threads of the forum corresponding to the primary key.
    * @throws SQLException An SQL exception.
    */
-  public static ArrayList<String> getSubjectsIds(Connection con, ForumPK forumPK)
+  public static List<String> getSubjectsIds(Connection con, ForumPK forumPK)
       throws SQLException {
     return getMessagesIds(con, forumPK, 0);
   }
+
   private static final String QUERY_GET_NB_MESSAGES_SUBJECTS = "SELECT COUNT("
       + MESSAGE_COLUMN_MESSAGE_ID + ") FROM " + MESSAGE_TABLE + " WHERE "
       + MESSAGE_COLUMN_FORUM_ID + " = ?" + " AND "
@@ -849,7 +852,7 @@ public class ForumsDAO {
         : QUERY_GET_NB_MESSAGES_NOT_SUBJECTS);
     SilverTrace.info("forums", "ForumsDAO.getNbSubjects()",
         "root.MSG_GEN_PARAM_VALUE", "selectQuery  = " + selectQuery
-        + " ; forumId = " + forumId);
+            + " ; forumId = " + forumId);
 
     PreparedStatement prepStmt = null;
     ResultSet rs = null;
@@ -866,6 +869,7 @@ public class ForumsDAO {
     }
     return 0;
   }
+
   private static final String QUERY_GET_AUTHOR_NB_MESSAGES = "SELECT COUNT("
       + MESSAGE_COLUMN_MESSAGE_ID + ") FROM " + MESSAGE_TABLE + " WHERE "
       + MESSAGE_COLUMN_MESSAGE_AUTHOR + " = ? AND " + MESSAGE_COLUMN_STATUS + " = ? ";
@@ -880,7 +884,7 @@ public class ForumsDAO {
       throws SQLException {
     SilverTrace.info("forums", "ForumsDAO.getAuthorNbMessages()",
         "root.MSG_GEN_PARAM_VALUE", "selectQuery  = "
-        + QUERY_GET_AUTHOR_NB_MESSAGES + " ; messageAuthor = " + userId);
+            + QUERY_GET_AUTHOR_NB_MESSAGES + " ; messageAuthor = " + userId);
 
     PreparedStatement prepStmt = null;
     ResultSet rs = null;
@@ -897,6 +901,7 @@ public class ForumsDAO {
     }
     return 0;
   }
+
   private static final String QUERY_GET_NB_RESPONSES = "SELECT "
       + MESSAGE_COLUMN_MESSAGE_ID + " FROM " + MESSAGE_TABLE + " WHERE "
       + MESSAGE_COLUMN_FORUM_ID + " = ?" + " AND "
@@ -921,7 +926,7 @@ public class ForumsDAO {
       prepStmt.setString(3, status);
       rs = prepStmt.executeQuery();
       while (rs.next()) {
-        nextMessageIds.add(new Integer(rs.getInt(MESSAGE_COLUMN_MESSAGE_ID)));
+        nextMessageIds.add(Integer.valueOf(rs.getInt(MESSAGE_COLUMN_MESSAGE_ID)));
       }
     } catch (SQLException sqle) {
       return 0;
@@ -936,6 +941,7 @@ public class ForumsDAO {
     }
     return nb;
   }
+
   private static final String QUERY_GET_LAST_MESSAGE = "SELECT "
       + MESSAGE_COLUMN_MESSAGE_ID + " FROM " + MESSAGE_TABLE + " WHERE "
       + MESSAGE_COLUMN_FORUM_ID + " = ?" + " AND "
@@ -955,7 +961,7 @@ public class ForumsDAO {
       throws SQLException {
     SilverTrace.info("forums", "ForumsDAO.getLastMessage()",
         "root.MSG_GEN_PARAM_VALUE", "selectQuery  = " + QUERY_GET_LAST_MESSAGE + " WHERE "
-        + MESSAGE_COLUMN_STATUS + " =  ? ");
+            + MESSAGE_COLUMN_STATUS + " =  ? ");
 
     int messageId = -1;
     PreparedStatement selectStmt = null;
@@ -1128,7 +1134,7 @@ public class ForumsDAO {
       String instanceId) throws SQLException {
     SilverTrace.info("forums", "ForumsDAO.getAllForumsByInstanceId()",
         "root.MSG_GEN_PARAM_VALUE", "selectQuery  = "
-        + QUERY_GET_ALL_FORUMS_BY_INSTANCE_ID);
+            + QUERY_GET_ALL_FORUMS_BY_INSTANCE_ID);
 
     Collection<Integer> forumIds = new ArrayList<Integer>();
     PreparedStatement selectStmt = null;
@@ -1138,13 +1144,14 @@ public class ForumsDAO {
       selectStmt.setString(1, instanceId);
       rs = selectStmt.executeQuery();
       while (rs.next()) {
-        forumIds.add(new Integer(rs.getInt(1)));
+        forumIds.add(Integer.valueOf(rs.getInt(1)));
       }
     } finally {
       DBUtil.close(rs, selectStmt);
     }
     return forumIds;
   }
+
   private static final String QUERY_GET_ALL_MESSAGES_BY_FORUM = "SELECT "
       + MESSAGE_COLUMN_MESSAGE_ID + " FROM " + MESSAGE_TABLE + " WHERE "
       + MESSAGE_COLUMN_FORUM_ID + " = ?" + " ORDER BY "
@@ -1161,7 +1168,7 @@ public class ForumsDAO {
       throws SQLException {
     SilverTrace.info("forums", "ForumsDAO.getAllMessageByForum()",
         "root.MSG_GEN_PARAM_VALUE", "selectQuery  = "
-        + QUERY_GET_ALL_MESSAGES_BY_FORUM);
+            + QUERY_GET_ALL_MESSAGES_BY_FORUM);
 
     Collection<String> messageIds = new ArrayList<String>();
     PreparedStatement selectStmt = null;
@@ -1249,6 +1256,7 @@ public class ForumsDAO {
         "root.MSG_GEN_PARAM_VALUE", "message = " + message);
     return message;
   }
+
   private static final String QUERY_GET_MESSAGE_INFOS = "SELECT "
       + MESSAGE_COLUMNS + " FROM " + MESSAGE_TABLE + " WHERE "
       + MESSAGE_COLUMN_MESSAGE_ID + " = ?";
@@ -1263,7 +1271,7 @@ public class ForumsDAO {
       throws SQLException {
     SilverTrace.info("forums", "ForumsDAO.getMessageInfos()",
         "root.MSG_GEN_PARAM_VALUE", "selectQuery  = "
-        + QUERY_GET_MESSAGE_INFOS);
+            + QUERY_GET_MESSAGE_INFOS);
 
     PreparedStatement selectStmt = null;
     ResultSet rs = null;
@@ -1279,6 +1287,7 @@ public class ForumsDAO {
     }
     return new Vector();
   }
+
   private static final String QUERY_GET_MESSAGE = "SELECT " + MESSAGE_COLUMNS
       + " FROM " + MESSAGE_TABLE + " WHERE " + MESSAGE_COLUMN_MESSAGE_ID
       + " = ?";
@@ -1311,6 +1320,7 @@ public class ForumsDAO {
     }
     return null;
   }
+
   private static final String QUERY_GET_MESSAGE_TITLE = "SELECT "
       + MESSAGE_COLUMN_MESSAGE_TITLE + " FROM " + MESSAGE_TABLE + " WHERE "
       + MESSAGE_COLUMN_MESSAGE_ID + " = ?";
@@ -1325,7 +1335,7 @@ public class ForumsDAO {
       throws SQLException {
     SilverTrace.info("forums", "ForumsDAO.getMessageTitle()",
         "root.MSG_GEN_PARAM_VALUE", "selectQuery  = "
-        + QUERY_GET_MESSAGE_TITLE);
+            + QUERY_GET_MESSAGE_TITLE);
 
     PreparedStatement selectStmt = null;
     ResultSet rs = null;
@@ -1341,6 +1351,7 @@ public class ForumsDAO {
     }
     return "";
   }
+
   private static final String QUERY_GET_MESSAGE_PARENT_ID = "SELECT "
       + MESSAGE_COLUMN_MESSAGE_PARENT_ID + " FROM " + MESSAGE_TABLE + " WHERE "
       + MESSAGE_COLUMN_MESSAGE_ID + " = ?";
@@ -1355,7 +1366,7 @@ public class ForumsDAO {
       throws SQLException {
     SilverTrace.info("forums", "ForumsDAO.getMessageParentId()",
         "root.MSG_GEN_PARAM_VALUE", "selectQuery  = "
-        + QUERY_GET_MESSAGE_PARENT_ID);
+            + QUERY_GET_MESSAGE_PARENT_ID);
 
     PreparedStatement selectStmt = null;
     ResultSet rs = null;
@@ -1371,6 +1382,7 @@ public class ForumsDAO {
     }
     return -1;
   }
+
   private static final String QUERY_GET_THREAD = "SELECT " + MESSAGE_COLUMNS
       + " FROM " + MESSAGE_TABLE + " WHERE " + MESSAGE_COLUMN_MESSAGE_ID
       + " = ?" + " AND " + MESSAGE_COLUMN_MESSAGE_PARENT_ID + " = ?";
@@ -1404,6 +1416,7 @@ public class ForumsDAO {
     }
     return null;
   }
+
   private static final String QUERY_CREATE_MESSAGE = "INSERT INTO "
       + MESSAGE_TABLE + " (" + MESSAGE_COLUMNS + ")"
       + " VALUES (?, ?, ?, ?, ?, ?, ?)";
@@ -1454,11 +1467,12 @@ public class ForumsDAO {
       DBUtil.close(insertStmt);
     }
   }
+
   private static final String QUERY_UPDATE_MESSAGE =
       "UPDATE " + MESSAGE_TABLE
-      + " SET " + MESSAGE_COLUMN_MESSAGE_TITLE + " = ? , " + MESSAGE_COLUMN_STATUS + " = ? "
-      + " WHERE "
-      + MESSAGE_COLUMN_MESSAGE_ID + " = ?";
+          + " SET " + MESSAGE_COLUMN_MESSAGE_TITLE + " = ? , " + MESSAGE_COLUMN_STATUS + " = ? "
+          + " WHERE "
+          + MESSAGE_COLUMN_MESSAGE_ID + " = ?";
 
   /**
    * Updates the message corresponding to the primary key.
@@ -1483,6 +1497,7 @@ public class ForumsDAO {
       DBUtil.close(updateStmt);
     }
   }
+
   private static final String QUERY_DELETE_MESSAGE_MESSAGE = "DELETE FROM "
       + MESSAGE_TABLE + " WHERE " + MESSAGE_COLUMN_MESSAGE_ID + " = ?";
   private static final String QUERY_DELETE_MESSAGE_SUBSCRIPTION = "DELETE FROM "
@@ -1501,7 +1516,7 @@ public class ForumsDAO {
       throws SQLException {
     SilverTrace.info("forums", "ForumsDAO.deleteMessage()",
         "root.MSG_GEN_PARAM_VALUE", "deleteQuery  = "
-        + QUERY_DELETE_MESSAGE_MESSAGE);
+            + QUERY_DELETE_MESSAGE_MESSAGE);
 
     PreparedStatement deleteStmt = null;
     try {
@@ -1516,6 +1531,7 @@ public class ForumsDAO {
       DBUtil.close(deleteStmt);
     }
   }
+
   private static final String QUERY_GET_MESSAGE_SONS = "SELECT "
       + MESSAGE_COLUMN_MESSAGE_ID + " FROM " + MESSAGE_TABLE + " WHERE "
       + MESSAGE_COLUMN_MESSAGE_PARENT_ID + " = ?";
@@ -1547,6 +1563,7 @@ public class ForumsDAO {
     }
     return messagesIds;
   }
+
   private static final String QUERY_IS_MODERATOR = "SELECT "
       + RIGHTS_COLUMN_FORUM_ID + " FROM " + RIGHTS_TABLE + " WHERE "
       + RIGHTS_COLUMN_USER_ID + " = ?";
@@ -1563,7 +1580,7 @@ public class ForumsDAO {
       String userId) throws SQLException {
     SilverTrace.info("forums", "ForumsDAO.isModerator()",
         "root.MSG_GEN_PARAM_VALUE", "selectQuery  = " + QUERY_IS_MODERATOR
-        + " ; userId=" + userId);
+            + " ; userId=" + userId);
 
     PreparedStatement prepStmt = null;
     ResultSet rs = null;
@@ -1582,6 +1599,7 @@ public class ForumsDAO {
     }
     return false;
   }
+
   private static final String QUERY_ADD_MODERATOR = "INSERT INTO "
       + RIGHTS_TABLE + " (" + RIGHTS_COLUMNS + ")" + " VALUES (?, ?)";
 
@@ -1607,6 +1625,7 @@ public class ForumsDAO {
       DBUtil.close(insertStmt);
     }
   }
+
   private static final String QUERY_REMOVE_MODERATOR = "DELETE FROM "
       + RIGHTS_TABLE + " WHERE " + RIGHTS_COLUMN_USER_ID + " = ?" + " AND "
       + RIGHTS_COLUMN_FORUM_ID + " = ?";
@@ -1633,6 +1652,7 @@ public class ForumsDAO {
       DBUtil.close(deleteStmt);
     }
   }
+
   private static final String QUERY_REMOVE_ALL_MODERATORS = "DELETE FROM "
       + RIGHTS_TABLE + " WHERE " + RIGHTS_COLUMN_FORUM_ID + " = ?";
 
@@ -1646,7 +1666,7 @@ public class ForumsDAO {
       throws SQLException {
     SilverTrace.info("forums", "ForumsDAO.removeAllModerators()",
         "root.MSG_GEN_PARAM_VALUE", "deleteQuery  = "
-        + QUERY_REMOVE_ALL_MODERATORS);
+            + QUERY_REMOVE_ALL_MODERATORS);
 
     PreparedStatement deleteStmt = null;
     try {
@@ -1657,6 +1677,7 @@ public class ForumsDAO {
       DBUtil.close(deleteStmt);
     }
   }
+
   private static final String QUERY_GET_MODERATORS = "SELECT "
       + RIGHTS_COLUMNS + " FROM " + RIGHTS_TABLE + " WHERE "
       + RIGHTS_COLUMN_FORUM_ID + " = ?";
@@ -1665,7 +1686,7 @@ public class ForumsDAO {
       throws SQLException {
     SilverTrace.info("forums", "ForumsDAO.getModerators()",
         "root.MSG_GEN_PARAM_VALUE", "query  = "
-        + QUERY_GET_MODERATORS);
+            + QUERY_GET_MODERATORS);
 
     List<String> moderators = new ArrayList<String>();
     String userId = "";
@@ -1684,6 +1705,7 @@ public class ForumsDAO {
     }
     return moderators;
   }
+
   private static final String QUERY_MOVE_MESSAGE = "UPDATE " + MESSAGE_TABLE
       + " SET " + MESSAGE_COLUMN_FORUM_ID + " = ?" + " WHERE "
       + MESSAGE_COLUMN_MESSAGE_ID + " = ?";
@@ -1727,10 +1749,12 @@ public class ForumsDAO {
     for (int i = 0; i < currentMessagesIds.size(); i++) {
       messageId = (String) currentMessagesIds.elementAt(i);
       messagesIds.add(messageId);
-      messagesIds.addAll(getAllMessageSons(con, new MessagePK(messagePK.getInstanceId(), messageId)));
+      messagesIds
+          .addAll(getAllMessageSons(con, new MessagePK(messagePK.getInstanceId(), messageId)));
     }
     return messagesIds;
   }
+
   private static final String QUERY_SUBSCRIBE_MESSAGE = "INSERT INTO "
       + SUBSCRIPTION_TABLE + " (" + SUBSCRIPTION_COLUMNS + ")"
       + " VALUES (?, ?)";
@@ -1746,7 +1770,7 @@ public class ForumsDAO {
       String userId) throws SQLException {
     SilverTrace.info("forums", "ForumsDAO.subscribeMessage()",
         "root.MSG_GEN_PARAM_VALUE", "insertQuery  = "
-        + QUERY_SUBSCRIBE_MESSAGE);
+            + QUERY_SUBSCRIBE_MESSAGE);
 
     PreparedStatement insertStmt = null;
     try {
@@ -1758,6 +1782,7 @@ public class ForumsDAO {
       DBUtil.close(insertStmt);
     }
   }
+
   private static final String QUERY_UNSUBSCRIBE_MESSAGE = "DELETE FROM "
       + SUBSCRIPTION_TABLE + " WHERE " + SUBSCRIPTION_COLUMN_USER_ID + " = ?"
       + " AND " + SUBSCRIPTION_COLUMN_MESSAGE_ID + " = ?";
@@ -1773,7 +1798,7 @@ public class ForumsDAO {
       String userId) throws SQLException {
     SilverTrace.info("forums", "ForumsDAO.unsubscribeMessage()",
         "root.MSG_GEN_PARAM_VALUE", "deleteQuery  = "
-        + QUERY_UNSUBSCRIBE_MESSAGE);
+            + QUERY_UNSUBSCRIBE_MESSAGE);
 
     PreparedStatement deleteStmt = null;
     try {
@@ -1785,6 +1810,7 @@ public class ForumsDAO {
       DBUtil.close(deleteStmt);
     }
   }
+
   private static final String QUERY_REMOVE_ALL_SUBSCRIBERS = "DELETE FROM "
       + SUBSCRIPTION_TABLE + " WHERE " + SUBSCRIPTION_COLUMN_MESSAGE_ID
       + " = ?";
@@ -1799,7 +1825,7 @@ public class ForumsDAO {
       throws SQLException {
     SilverTrace.info("forums", "ForumsDAO.removeAllSubscribers()",
         "root.MSG_GEN_PARAM_VALUE", "deleteQuery  = "
-        + QUERY_REMOVE_ALL_SUBSCRIBERS);
+            + QUERY_REMOVE_ALL_SUBSCRIBERS);
 
     PreparedStatement deleteStmt = null;
     try {
@@ -1810,6 +1836,7 @@ public class ForumsDAO {
       DBUtil.close(deleteStmt);
     }
   }
+
   private static final String QUERY_LIST_ALL_SUBSCRIBERS = "SELECT "
       + SUBSCRIPTION_COLUMN_USER_ID + " FROM " + SUBSCRIPTION_TABLE + " WHERE "
       + SUBSCRIPTION_COLUMN_MESSAGE_ID + " = ?";
@@ -1824,7 +1851,7 @@ public class ForumsDAO {
       throws SQLException {
     SilverTrace.info("forums", "ForumsDAO.listAllSubscribers()",
         "root.MSG_GEN_PARAM_VALUE", "selectQuery  = "
-        + QUERY_LIST_ALL_SUBSCRIBERS);
+            + QUERY_LIST_ALL_SUBSCRIBERS);
 
     Vector<String> userIds = new Vector<String>();
     PreparedStatement selectStmt = null;
@@ -1841,6 +1868,7 @@ public class ForumsDAO {
     }
     return userIds;
   }
+
   private static final String QUERY_IS_SUBSCRIBER = "SELECT "
       + SUBSCRIPTION_COLUMN_USER_ID + " FROM " + SUBSCRIPTION_TABLE + " WHERE "
       + SUBSCRIPTION_COLUMN_MESSAGE_ID + " = ?" + " AND "
@@ -1877,7 +1905,7 @@ public class ForumsDAO {
    * @return The forum corresponding to the primary key (ForumDetail).
    * @throws SQLException An SQL exception.
    */
-  private static ForumDetail getForumDetail(Connection con, ForumPK forumPK)
+  public static ForumDetail getForumDetail(Connection con, ForumPK forumPK)
       throws SQLException {
     PreparedStatement stmt = null;
     ResultSet rs = null;
@@ -1891,12 +1919,13 @@ public class ForumsDAO {
         throw new ForumsRuntimeException("ForumsDAO.getForumDetail()",
             SilverpeasRuntimeException.ERROR,
             "root.EX_CANT_LOAD_ENTITY_ATTRIBUTES", "ForumId = "
-            + forumPK.getId() + " not found in database !");
+                + forumPK.getId() + " not found in database !");
       }
     } finally {
       DBUtil.close(rs, stmt);
     }
   }
+
   private static final String QUERY_GET_LAST_VISIT = "SELECT "
       + HISTORY_COLUMN_LAST_ACCESS + " FROM " + HISTORY_TABLE + " WHERE "
       + HISTORY_COLUMN_USER_ID + " = ?" + " AND " + HISTORY_COLUMN_MESSAGE_ID
@@ -1924,7 +1953,7 @@ public class ForumsDAO {
       if (rs.next()) {
         SilverTrace.info("forums", "ForumsDAO.getLastVisit()",
             "root.MSG_GEN_PARAM_VALUE", " lastAccess  = "
-            + rs.getString("lastAccess") + " today = " + new Date());
+                + rs.getString("lastAccess") + " today = " + new Date());
         return new Date(Long.parseLong(rs.getString(HISTORY_COLUMN_LAST_ACCESS)));
       }
     } finally {
@@ -1985,6 +2014,7 @@ public class ForumsDAO {
         "root.MSG_GEN_PARAM_VALUE", "date de dernière visite = " + lastVisit);
     return lastVisit;
   }
+
   private static final String QUERY_ADD_LAST_VISIT = "INSERT INTO "
       + HISTORY_TABLE + " (" + HISTORY_COLUMNS + ")" + " VALUES (?, ?, ?)";
 
@@ -2018,6 +2048,7 @@ public class ForumsDAO {
       DBUtil.close(insertStmt);
     }
   }
+
   private static final String QUERY_DELETE_VISIT = "DELETE FROM "
       + HISTORY_TABLE + " WHERE " + HISTORY_COLUMN_USER_ID + " = ?" + " AND "
       + HISTORY_COLUMN_MESSAGE_ID + " = ?";
@@ -2058,10 +2089,8 @@ public class ForumsDAO {
     try {
       creationDate = formatter.parse(rs.getString(FORUM_COLUMN_FORUM_CREATION_DATE));
     } catch (ParseException e) {
-      throw new SQLException(
-          "ForumsDAO : resultSet2ForumDetail() : internal error : "
-          + "creationDate format unknown for forumPK = " + forumPK + " : "
-          + e.toString());
+      throw new SQLException("ForumsDAO : resultSet2ForumDetail() : internal error : "
+          + "creationDate format unknown for forumPK = " + forumPK + " : " + e.toString(), e);
     }
 
     String name = rs.getString(FORUM_COLUMN_FORUM_NAME);
